--- a/index.html
+++ b/index.html
@@ -1049,7 +1049,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk'
+                liffId: '2007726498-Rbb3PbAm'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
