--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             /* 画面中央に固定 */
             transform: translateY(-50%) translateX(13px);
             /* 中央配置と右ずらし */
-            background: #00b08d;
+            background: #a8b9a7;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -104,7 +104,7 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #00b08d, #005745);
+            background: linear-gradient(135deg, #a8b9a7, #667965);
             color: white;
             padding: 20px;
             border-radius: 0 15px 0px 45px;
@@ -125,7 +125,7 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
-            background-color: #00b08d;
+            background-color: #a8b9a7;
             color: white;
             border-radius: 6px;
             font-size: 18px;
@@ -142,7 +142,7 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
-            background-color: #00b08d;
+            background-color: #a8b9a7;
             color: white;
             border-radius: 6px;
             font-size: 18px;
@@ -164,12 +164,12 @@
             align-items: center;
             justify-content: center;
             background: white;
-            color: #00b08d;
+            color: #a8b9a7;
             font-weight: bold;
             font-size: 0.9em;
             border-radius: 4px;
             padding: 2px 6px;
-            border: 2px solid #00b08d;
+            border: 2px solid #a8b9a7;
         }
 
         input[type="text"],
@@ -230,10 +230,10 @@
             white-space: nowrap;
         }
 
-        .visit-buttons button.active
-        .kibou1-buttons button.active,
+        .visit-buttons button.active,
         .kibou2-buttons button.active,
         .kibou3-buttons button.active,
+        .kibou1-buttons button.active,
         .childsgender-buttons button.active,
         .Caesareansection-buttons button.active,
         .hairmakeup-buttons button.active,
@@ -326,7 +326,7 @@
         }
 
         .calendar td.selected {
-            background-color: #00b08d;
+            background-color: #a8b9a7;
             color: #fff;
         }
 
@@ -603,7 +603,7 @@
 
         .highlight-background {
             cursor: pointer;
-            background-color: #00b08d;
+            background-color: #a8b9a7;
             padding: 10px;
             border-radius: 6px;
             font-size: 18px;
@@ -666,7 +666,7 @@
 
         input:focus,
         textarea:focus {
-            border-color: #00b08d;
+            border-color: #a8b9a7;
             outline: none;
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
         }
@@ -675,7 +675,7 @@
             padding: 12px;
             border: none;
             border-radius: 6px;
-            background-color: #00b08d;
+            background-color: #a8b9a7;
             color: #000000;
             font-size: 16px;
             cursor: pointer;
@@ -691,11 +691,11 @@
             width: 100%;
             padding: 15px;
             font-size: 18px;
-            background-color: #dc3545;
+            background-color: #a8b9a7;
         }
 
         .submit-button:hover {
-            background-color: #c82333;
+            background-color: #a8b9a7;
         }
 
         @media (max-width: 768px) {
@@ -744,7 +744,7 @@
             left: 50%;
             transform: translate(-50%, -10px);
             /* Y方向に上げる */
-            background-color: #00b08d;
+            background-color: #a8b9a7;
             color: #fff;
             padding: 3px 12px;
             /* ボックスのパディングを縮小 */
@@ -838,7 +838,7 @@
             /* 内側に3pxのスペースをつける（中身がくっつかないように） */
             font-weight: 600;
             /* 文字を少し太くする（600は太さの目安） */
-            background-color: #00b08d;
+            background-color: #a8b9a7;
             /* 背景の色をくすんだ緑にする */
             color: white;
             /* 文字の色を白にする */
@@ -909,7 +909,7 @@
 
         /* フォーカス時の装飾 */
         #mugwortreservationtime:focus {
-            border-color: #00a683;
+            border-color: #a8b9a7;
             outline: none;
             background-color: #f9fefc;
         }
@@ -951,9 +951,9 @@
 
         <div class="label">希望時間<span class="required">必須</span></div>
         <div class="kibou1-buttons">
-            <button type="button" id="firstkibou1" onclick="selectkibou1(this)">午前</button>
-            <button type="button" id="repeatkibou1" onclick="selectkibou1(this)">午後</button>
-            <button type="button" id="sankibou1" onclick="selectkibou1(this)">相談したい</button>
+            <button type="button" id="firstkibou1" onclick="selectkibou1(this)">10時</button>
+            <button type="button" id="repeatkibou1" onclick="selectkibou1(this)">13時</button>
+            <button type="button" id="sankibou1" onclick="selectkibou1(this)">検討中</button>
         </div>
 
         <div class="highlight-background">
@@ -970,11 +970,11 @@
         <div class="kibou2-buttons">
             <button type="button" id="firstkibou2" onclick="selectkibou2(this)">午前</button>
             <button type="button" id="repeatkibou2" onclick="selectkibou2(this)">午後</button>
-            <button type="button" id="sankibou2" onclick="selectkibou2(this)">相談したい</button>
+            <button type="button" id="sankibou2" onclick="selectkibou2(this)">検討中</button>
         </div>
 
         <div class="highlight-background">
-            <span class="kibounitizi">第3希望日※任意</span>
+            <span class="kibounitizi">第3希望日(任意)</span>
         </div>
 
         <!-- カスタム placeholder 表示用 -->
@@ -983,11 +983,11 @@
             <input type="date" id="date3" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
         </div>
 
-        <div class="label">希望時間<span class="required">必須</span></div>
+        <div class="labelContent">希望時間</div>
         <div class="kibou3-buttons">
             <button type="button" id="firstkibou3" onclick="selectkibou3(this)">午前</button>
             <button type="button" id="repeatkibou3" onclick="selectkibou3(this)">午後</button>
-            <button type="button" id="sankibou3" onclick="selectkibou3(this)">相談したい</button>
+            <button type="button" id="sankibou3" onclick="selectkibou3(this)">検討中</button>
         </div>
 
         <div class="label">プランをお選びください<span class="required">必須</span></div>
@@ -1010,54 +1010,57 @@
         </div>
 
         <div class="highlight-background">
-            <div class="kibounitizi">お子様のお誕生日（任意）</span></div>
+            <div class="kibounitizi">お子様のお誕生日 or 予定日<span class="required">必須</span></span></div>
         </div>
 
         <!-- カスタム placeholder 表示用 -->
         <div class="datetime-wrapper" style="text-align: center;">
             <span class="placeholder" id="placeholder4">⇩タップして日時を入力⇩</span>
-            <input type="datetime-local" id="date4" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
+            <input type="date" id="date4" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
         </div>
 
-        <div class="label">お子様のお名前（任意）</div>
+        <div class="labelContent">お子様のお名前</div>
         <textarea id="mugwortmainkid" placeholder="お子様のお名前をご記入ください。"></textarea>
 
-        <div class="label">お子様の性別（任意）</div>
+        <div class="labelContent">お子様の性別</div>
         <div class="childsgender-buttons">
             <button type="button" onclick="selectchildsgender(this)">男の子</button>
             <button type="button" onclick="selectchildsgender(this)">男の子</button>
         </div>
 
-        <div class="label">ご兄弟のお名前（任意）</div>
+        <div class="labelContent">ご兄弟のお名前</div>
         <textarea id="mugwortsiblinginfo" placeholder="お名前(読み仮名)・年齢・性別をご記入ください。"></textarea>
 
-        <div class="label">ご兄弟の性別（任意）</div>
+        <div class="labelContent">ご兄弟の性別</div>
         <div class="Caesareansection-buttons">
             <button type="button" onclick="selectCaesareansection(this)">男の子</button>
             <button type="button" onclick="selectCaesareansection(this)">女の子</button>
         </div>
 
-        <div class="label">ご兄弟の年齢（任意）</div>
-        <input type="text" id="mugwortparticipants" placeholder="例:0歳10ヶ月、3歳、5歳 など">
+        <div class="labelContent">ご兄弟の年齢</div>
+        <input type="tel" id="mugwortparticipants" placeholder="例:0歳10ヶ月、3歳、5歳 など">
 
-        <div class="label">撮影に参加される方の人数と続柄（任意）</div>
+        <div class="info-text">【二人目以降】</div>
+        <input type="text" id="mugwortmainkid2" placeholder="ご兄弟のお名前・性別・年齢をご記入ください">
+
+        <div class="labelContent">撮影に参加される方の人数と続柄</div>
         <input type="text" id="mugwortshrinename" placeholder="撮影に参加される方の人数と続柄をご記入ください">
 
-        <div class="label">生花撮影ご希望の有無<span class="required">必須</span></div>
+        <div class="labelContent">生花撮影ご希望の有無<span class="required">必須</span></div>
         <div class="kimono-buttons">
             <button type="button" onclick="selectkimono(this)">有り</button>
             <button type="button" onclick="selectkimono(this)">無し</button>
-            <button type="button" onclick="selectkimono(this)">相談したい</button>
+            <button type="button" onclick="selectkimono(this)">検討中</button>
         </div>
 
-        <div class="label">ヘアメイクご希望の有無<span class="required">必須</span></div>
+        <div class="labelContent">ヘアメイクご希望の有無<span class="required">必須</span></div>
         <div class="hairmakeup-buttons">
             <button type="button" onclick="selecthairmakeup(this)">有り</button>
             <button type="button" onclick="selecthairmakeup(this)">無し</button>
-            <button type="button" onclick="selecthairmakeup(this)">相談したい</button>
+            <button type="button" onclick="selecthairmakeup(this)">検討中</button>
         </div>
 
-        <div class="labelContent">ご質問/ご相談<br>（質問等お気軽にご記入ください）</div>
+        <div class="labelContent">ご質問/ご相談</div>
         <textarea id="message" rows="4" placeholder="ご質問/ご相談を入力してください"></textarea>
 
         <button class="submit-button" onclick="submitForm()" div id="section-message">送信</button>
@@ -1512,7 +1515,7 @@
             kibou3Count = element.innerText;
 
             // 選択された訪問回数に対応する時間を取得
-            selectedkibou3Time = kibou3Times[kibou1Count];
+            selectedkibou3Time = kibou3Times[kibou3Count];
 
             console.log('選択された訪問回数の時間:', selectedkibou3Time);
 
@@ -1703,6 +1706,7 @@
                 name: document.getElementById('name').value.trim(),
                 phone: document.getElementById('phone').value.trim(),
                 mugwortmainkid: document.getElementById('mugwortmainkid').value.trim(),
+                mugwortmainkid2: document.getElementById('mugwortmainkid2').value.trim(),
                 ziyuusonota: document.getElementById('ziyuusonota').value.trim(),
                 Yourresidentialaddress: document.getElementById('Yourresidentialaddress').value.trim(),
                 mugwortsiblinginfo: document.getElementById('mugwortsiblinginfo').value.trim(),
@@ -1742,7 +1746,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n≪バースデーアニバーサリー≫\n\n｟お名前｠\n・${formData.name}\n\n｟ご住所｠\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\n｟プラン｠\n・${formData.visitCount}\n\n｟撮影内容｠\n・${formData.FreshflowerphotographyCount}\n${formData.ziyuusonota}\n\n｟お子様のお誕生日｠\n・${formatDate(formData.dates[3])}\n\n｟お子様のお名前｠\n・${formData.mugwortmainkid}\n\n｟お子様の性別｠\n・${formData.childsgenderCount}\n\n｟ご兄弟のお名前｠\n・${formData.mugwortsiblinginfo}\n\n｟ご兄弟の性別｠\n・${formData.CaesareansectionCount}\n\n｟ご兄弟の年齢｠\n・${formData.mugwortparticipants}\n\n｟撮影に参加される方｠\n・${formData.mugwortshrinename}\n\n｟生花撮影｠\n・${formData.kimonoCount}\n\n｟お支度｠\n・${formData.hairmakeupCount}\n\n【希望日時】\n｟第一希望日｠\n${formatDateWithTime(formData.dates[0])}\n｟希望時間1｠\n・${formData.kibou1Count}\n\n｟第二希望日｠\n${formatDateWithTime(formData.dates[1])}\n｟希望時間2｠\n・${formData.kibou2Count}\n\n｟第三希望日｠\n${formatDateWithTime(formData.dates[2])}\n｟希望時間3｠\n・${formData.kibou3Count}\n\n｟メッセージ｠${formData.message}`
+                text: `【予約フォーム】\n≪バースデーアニバーサリー≫\n\n｟お名前｠\n・${formData.name}\n\n｟ご住所｠\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\n｟プラン｠\n・${formData.visitCount}\n\n｟撮影内容｠\n・${formData.FreshflowerphotographyCount}\n${formData.ziyuusonota}\n\n｟お子様のお誕生日｠\n・${formatDate(formData.dates[3])}\n\n｟お子様のお名前｠\n・${formData.mugwortmainkid}\n\n｟お子様の性別｠\n・${formData.childsgenderCount}\n\n｟ご兄弟のお名前｠\n・${formData.mugwortsiblinginfo}\n\n｟ご兄弟の性別｠\n・${formData.CaesareansectionCount}\n\n｟ご兄弟の年齢｠\n・${formData.mugwortparticipants}\n\n｟二人目ご兄弟のお名前｠\n・${formData.mugwortmainkid2}\n\n｟撮影に参加される方｠\n・${formData.mugwortshrinename}\n\n｟生花撮影｠\n・${formData.kimonoCount}\n\n｟お支度｠\n・${formData.hairmakeupCount}\n\n【希望日時】\n｟第一希望日｠\n${formatDateWithTime(formData.dates[0])}\n｟希望時間1｠\n・${formData.kibou1Count}\n\n｟第二希望日｠\n${formatDateWithTime(formData.dates[1])}\n｟希望時間2｠\n・${formData.kibou2Count}\n\n｟第三希望日｠\n${formatDateWithTime(formData.dates[2])}\n｟希望時間3｠\n・${formData.kibou3Count}\n\n｟ご質問/ご相談｠${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
