--- a/index.html
+++ b/index.html
@@ -917,17 +917,10 @@
 </head>
 
 <body>
-    <!-- 右側の追従ナビ -->
-    <div class="side-nav" id="sideNav">
-        <a href="#section-message">
-            <span>⇩</span>
-            <i class="fas fa-comment"></i>
-        </a>
-    </div>
 
     <div class="container">
-        <h1>すずき写真事務所<br>バースデー/アニバーサリー
-            <div class="info-text">こちらのフォームは"公式LINEから"でのみ<br>送ることができます。</div>
+        <h1><span style="font-size: 18px;">すずき写真事務所</span><br>バースデー/アニバーサリー
+            <div class="info-text">こちらのフォームは携帯専用です。<br>パソコンからは送信できません</div>
         </h1>
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
