--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@
         <div class="kibou1-buttons">
             <button type="button" id="firstkibou1" onclick="selectkibou1(this)">10時</button>
             <button type="button" id="repeatkibou1" onclick="selectkibou1(this)">13時</button>
-            <button type="button" id="sankibou1" onclick="selectkibou1(this)">検討中</button>
+            <button type="button" id="sankibou1" onclick="selectkibou1(this)">相談したい</button>
         </div>
 
         <div class="highlight-background">
@@ -963,7 +963,7 @@
         <div class="kibou2-buttons">
             <button type="button" id="firstkibou2" onclick="selectkibou2(this)">午前</button>
             <button type="button" id="repeatkibou2" onclick="selectkibou2(this)">午後</button>
-            <button type="button" id="sankibou2" onclick="selectkibou2(this)">検討中</button>
+            <button type="button" id="sankibou2" onclick="selectkibou2(this)">相談したい</button>
         </div>
 
         <div class="highlight-background">
@@ -980,7 +980,7 @@
         <div class="kibou3-buttons">
             <button type="button" id="firstkibou3" onclick="selectkibou3(this)">午前</button>
             <button type="button" id="repeatkibou3" onclick="selectkibou3(this)">午後</button>
-            <button type="button" id="sankibou3" onclick="selectkibou3(this)">検討中</button>
+            <button type="button" id="sankibou3" onclick="selectkibou3(this)">相談したい</button>
         </div>
 
         <div class="label">プランをお選びください<span class="required">必須</span></div>
@@ -999,7 +999,7 @@
             <button type="button" onclick="selectFreshflowerphotography(this)">入園・入学</button>
             <button type="button" onclick="selectFreshflowerphotography(this)">成人式</button>
             <div class="info-textmemo">その他の方は以下にご記入ください</div>
-            <textarea id="ziyuusonota" placeholder="例：山田太郎・3ヶ月・男の子など 複数いれば全員分ご記入ください。"></textarea>
+            <textarea id="ziyuusonota" placeholder="撮影内容をご記入ください"></textarea>
         </div>
 
         <div class="highlight-background">
@@ -1018,7 +1018,7 @@
         <div class="labelContent">お子様の性別</div>
         <div class="childsgender-buttons">
             <button type="button" onclick="selectchildsgender(this)">男の子</button>
-            <button type="button" onclick="selectchildsgender(this)">男の子</button>
+            <button type="button" onclick="selectchildsgender(this)">女の子</button>
         </div>
 
         <div class="labelContent">ご兄弟のお名前</div>
@@ -1037,7 +1037,7 @@
         <input type="text" id="mugwortmainkid2" placeholder="ご兄弟のお名前・性別・年齢をご記入ください">
 
         <div class="labelContent">撮影に参加される方の人数と続柄</div>
-        <input type="text" id="mugwortshrinename" placeholder="撮影に参加される方の人数と続柄をご記入ください">
+        <input type="text" id="mugwortshrinename" placeholder="例:3人（父、母、姉）">
 
         <div class="labelContent">生花撮影ご希望の有無<span class="required">必須</span></div>
         <div class="kimono-buttons">
@@ -1741,7 +1741,7 @@
                 type: 'text',
                 text: `【予約フォーム】\n≪バースデーアニバーサリー≫\n\n｟お名前｠\n・${formData.name}\n\n｟ご住所｠\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\n｟プラン｠\n・${formData.visitCount}\n\n｟撮影内容｠\n・${formData.FreshflowerphotographyCount}\n${formData.ziyuusonota}\n\n｟お子様のお誕生日｠\n・${formatDate(formData.dates[3])}\n\n｟お子様のお名前｠\n・${formData.mugwortmainkid}\n\n｟お子様の性別｠\n・${formData.childsgenderCount}\n\n｟ご兄弟のお名前｠\n・${formData.mugwortsiblinginfo}\n\n｟ご兄弟の性別｠\n・${formData.CaesareansectionCount}\n\n｟ご兄弟の年齢｠\n・${formData.mugwortparticipants}\n\n｟二人目ご兄弟のお名前｠\n・${formData.mugwortmainkid2}\n\n｟撮影に参加される方｠\n・${formData.mugwortshrinename}\n\n｟生花撮影｠\n・${formData.kimonoCount}\n\n｟お支度｠\n・${formData.hairmakeupCount}\n\n【希望日時】\n｟第一希望日｠\n${formatDateWithTime(formData.dates[0])}\n｟希望時間1｠\n・${formData.kibou1Count}\n\n｟第二希望日｠\n${formatDateWithTime(formData.dates[1])}\n｟希望時間2｠\n・${formData.kibou2Count}\n\n｟第三希望日｠\n${formatDateWithTime(formData.dates[2])}\n｟希望時間3｠\n・${formData.kibou3Count}\n\n｟ご質問/ご相談｠${formData.message}`
             }]).then(() => {
-                alert('当日キャンセルは無いようにお願いいたします。');
+                alert('お問合せありがとうございます。追って担当者から返信をさせて頂きます。');
                 liff.closeWindow();
             }).catch((err) => {
                 console.error('メッセージの送信に失敗しました', err);
